test/compile_errors/stage1/exe/missing_main_fn_in_executable.zig


// missing main fn in executable
//
// error: root source file has no member called 'main'
